# P-AIRCARS1

./: CITATION.cff  LICENSE  README.md  delmod.last  pyproject.toml  requirements.txt
paircars.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
paircars/data/: Ref_mean_bandpass_final.npy
paircars/data/quartical_docker/: Dockerfile
paircars/data/shadems_docker/: Dockerfile
paircars/pipeline/: __init__.py  basic_cal.py  do_apply_basiccal.py  do_apply_selfcal.py  do_imaging.py  do_pol_selfcal.py  do_selfcal.py  do_sidereal_cor.py  do_target_split.py  fill_caltable.py  flagging.py  import_model.py  init_data.py  kill_job.py  make_mwa_overlay.py  make_overlay.py  master_flow.py  mwa_make_ds.py  mwa_pbcor.py  prefect_server.py  show_msdetails.py  show_status.py  single_image_mwapbcor.py  viewer.py
paircars/tests/: README.md  download_test_data.py
paircars/tests/meerpipeline/: conftest.py  test_basic_cal.py  test_do_apply_basiccal.py  test_do_apply_selfcal.py  test_do_fluxcal.py  test_do_imaging.py  test_do_partition.py  test_do_selfcal.py  test_do_sidereal_cor.py  test_do_target_split.py  test_flagging.py  test_import_model.py  test_init_data.py  test_kill_job.py  test_master_flow.py  test_meer_make_ds.py  test_meer_pbcor.py  test_show_msdetails.py  test_show_status.py  test_single_image_meerpbcor.py
paircars/tests/utils/: conftest.py  test_basic_utils.py  test_calibration.py  test_casatasks.py  test_flagging.py  test_image_utils.py  test_imaging.py  test_logger_utils.py  test_meer_ploting_utils.py  test_meer_utils.py  test_ms_metadata.py  test_prefect_logger_utils.py  test_proc_manage_utils.py  test_resource_utils.py  test_selfcal_utils.py  test_sunpos_utils.py  test_udocker_utils.py
paircars/utils/: __init__.py  basic_utils.py  calibration.py  casatasks.py  create_caltable.py  crossphasecal.py  ds_utils.py  flagging.py  image_utils.py  imaging.py  logger_utils.py  meer_ploting_utils.py  meer_utils.py  ms_metadata.py  mwa_ploting_utils.py  mwa_utils.py  mwapb_utils.py  prefect_logger_utils.py  prefect_setup_utils.py  proc_manage_utils.py  resource_utils.py  selfcal_utils.py  sunpos_utils.py  udocker_utils.py
